NFS: incorrect "port=" value in /proc/mounts

Mounting with "-o vers=4" shows the following in /proc/mounts:

  ... namlen=255,hard,proto=tcp,port=0,timeo=600,retrans=2, ...
                                ^^^^^^

The default port, 2049, was actually used, but was never recorded
in this mount point's nfs_server.

Bugzilla: https://bugzilla.kernel.org/show_bug.cgi?id=69241

Orabug: 18560595

Signed-off-by: Chuck Lever <chuck.lever@oracle.com>
Acked-by: Jerry Snitselaar <jerry.snitselaar@oracle.com>