fs/nfs/client.c
@@ -923,6 +923,7 @@ void nfs_server_copy_userdata(struct nfs_server *target, struct nfs_server *sour
 	target->flags = source->flags;
 	target->rsize = source->rsize;
 	target->wsize = source->wsize;
+	target->port = source->port;
 	target->acregmin = source->acregmin;
 	target->acregmax = source->acregmax;
 	target->acdirmin = source->acdirmin;
